Apps/chatapp/overlays/beta/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp
spec:
  template:
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: chatapp
          image: kyczak/chatapp:beta
          resources:
            requests: 
              cpu: "300m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "700Mi"          
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100          # highest priority to worker nodes
            preference:
              matchExpressions:
              - key: workload
                operator: In
                values: [hlw]
          - weight: 10           # lower priority fallback
            preference:
              matchExpressions:
              - key: workload
                operator: In
                values: [llw]
