Apps/chatapp/overlays/beta/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatapp-route
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
  hostnames:
  - "chatapp.localhost"
  - "klyczakchatapp.pl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: beta-chatapp-svc
      port: 8000
      namespace: beta  # Cross-namespace backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-beta-chatapp-svc
  namespace: beta  # Target Service namespace
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik # Your HTTPRoute namespace(s)
  to:
  - group: ""
    kind: Service
    name: beta-chatapp-svc  # Exact Service name
