Apps/chatapp/overlays/beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beta-chatapp-svc
            port:
              number: 80
