Apps/chatapp/overlays/beta/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chatapp-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host('localhost')
      kind: Rule
      services:
        - name: beta-chatapp-svc
          port: 80
